kubernetes/apps/health-system/medplum/config/app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medplum-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: medplum-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: medplum-app
    spec:
      containers:
        - name: app
          image: medplum/medplum-app:5.1.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
