kubernetes/apps/health-system/medplum/config/app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: medplum-app
spec:
  selector:
    app.kubernetes.io/name: medplum-app
  ports:
    - name: http
      port: 3000
      targetPort: http
