kubernetes/apps/health-system/medplum/config/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medplum-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: internal
  rules:
    - host: medplum-api.rbl.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medplum-service
                port:
                  number: 80
